content/documentation/archive/v1.0.0/getting-started/index.adoc
---
title: "Getting started"
aliases:
- /gettingstarted/
date: 2019-03-20T09:04:38+02:00
draft: false
type: "getting-started"
weight: 3
menu:
  v1-0-0:
    weight: 20
---

:sectnums:
:toc: left
toc::[]
:toc-title: Kiali Getting Started Content
:keywords: Kiali Getting Started
:icons: font
:imagesdir: /images/gettingstarted/

icon:bullhorn[size=1x]{nbsp} Kiali Compatibility
[cols="10%,10%,10%,70%",options="header"]
|===
|Istio
|Maistra
|Kiali
|Notes

|1.1+
|0.7+
|0.17+
|Kiali 0.17+ requires istio 1.1+

|1.0.5+
|0.1+
|0.16
| Older Kiali versions may work but are not supported
|===

icon:lightbulb[size=1x]{nbsp}For several commands listed on this page, the OpenShift CLI command `oc` is used to interact with the cluster environment. If you are on Kubernetes, simply replace `oc` with `kubectl` unless otherwise noted.

== Installing Kiali

Kiali can be installed in an OpenShift or Kubernetes cluster environment. For OpenShift only, a minimal preparation is necessary.  See link:/documentation/prerequisites[Prerequisites] for environment requirements.

=== OpenShift Preparation

If you are installing on OpenShift, you need to grant the `cluster-admin` role to the user that is installing Istio and Kiali. If OpenShift is installed locally on the machine you are using, the following command should log you in as user `system:admin` which has this `cluster-admin` role:

[source,bash]
----
oc login -u system:admin
----

=== Install Istio

Make sure your cluster environment has Istio installed. For details on how to install Istio, see the link:https://istio.io/docs/setup/[Istio Setup docs].  If you are running on OpenShift and prefer Maistra, see link:https://maistra.io/docs/getting_started/install/[Maistra Setup docs].

icon:lightbulb[size=1x]{nbsp}Both Istio and Maistra include Kiali distributions.

If the Kiali version packaged with Istio or Maistra meets your needs then install Kiali using the Istio or Maistra installation procedure. You may then continue to link:#_open_the_ui[Open the UI].

If you prefer to use the latest Kiali version then do not install Kiali during the Istio or Maistra installation procedure. Complete the Istio or Maistra installation and then install Kiali using the steps below. Note that the Kiali installation script documented below will ask to delete an existing Kiali installation, if found.

=== Install the Kiali Operator

The Kiali Operator is an implementation of a link:https://coreos.com/operators/[Kubernetes Operator]. It provides a method of packaging, deploying, and managing Kiali.

To install the Kiali Operator (and, by default, the Kiali CR), run the install script via this command:

[source,bash]
----
bash <(curl -L https://git.io/getLatestKialiOperator)
----

This will pull the latest version of the Kiali Operator and Kiali itself, and install them using the default options. If Kiali was already installed, you will be prompted to remove the older version.

icon:lightbulb[size=1x]{nbsp} You can configure the Kiali Operator install script by setting environment variables when you run it. For example, if you do not want the install script to install a Kiali custom resource (and thus avoid having the Kiali Operator install Kiali itself), set the OPERATOR_INSTALL_KIALI environment variable to "false" and then run the script. Read the comments at the top of the link:https://github.com/kiali/kiali/blob/master/operator/deploy/deploy-kiali-operator.sh[Kiali Operator install script] for details on what custom configuration settings are available to you.

icon:bullhorn[size=1x]{nbsp} The install script requires `envsubst` installed and in your PATH; you can get it via the GNU `gettext` package.

During the installation, you will be prompted for the authentication strategy you want to use among `login`, `anonymous` and `openshift`.
See the link:#_login_options[Login Options] section below for more information.

=== Configure Kiali

The Kiali Operator runs inside the `kiali-operator` namespace and listens for a Kiali CR (custom resource) creation or changes. When it sees one created, it will install Kiali using the settings it finds in the CR object. To see all the different settings you can configure in a Kiali CR, see link:https://github.com/kiali/kiali/blob/master/operator/deploy/kiali/kiali_cr.yaml[this fully documented example Kiali CR yaml file].

To edit from a terminal, run:

[source,bash]
----
oc edit kiali kiali -n kiali-operator
----

Or to create / update using a local file (here `kiali_cr.yaml`):

[source,bash]
----
oc apply -f kiali_cr.yaml -n kiali-operator
----

=== Open the UI

Once Istio, Maistra or the Kiali Operator has installed Kiali, and the Kiali pod has successfully started, you can access the UI.

icon:bullhorn[size=2x]{nbsp} The credentials you use on the login screen depend on the authentication strategy that was configured for Kiali. See link:#_login_options[Login Options] for more details.

==== On OpenShift

If on OpenShift, you can easily find the URL to access Kiali by going to the OpenShift Console and navigating to the `istio-system` project's Overview page:

[#img-openshift]
.OpenShift console
image::os-console.png[OpenShift console]
{nbsp} +

In this case, the Kiali URL is `http://kiali-istio-system.192.168.64.13.nip.io`. In your case this will be a different IP.

You can also use the `oc` command to determine the base URL:

[source,bash]
----
oc get route -n istio-system -l app=kiali
----

==== On Kubernetes

If on Kubernetes, access Kiali over the Ingress URL. By default, Kiali web root is under `/kiali`.

Alternatively you can setup port forwarding to your local machine:

[source,bash]
----
kubectl port-forward svc/kiali 20001:20001 -n istio-system
----

Then the URL is `https://localhost:20001/kiali`.

== Uninstall

To uninstall Kiali is simple - just delete the Kiali CR. This will trigger the Kiali Operator to uninstall Kiali:

[source,bash]
----
oc delete kiali kiali -n kiali-operator
----

At this point, you have no Kiali installed, but you still have the Kiali Operator running. You could create another Kiali CR (with potentially different configuration settings) to install a new Kiali instance.

To uninstall the Kiali Operator, simply remove the `kiali-operator` namespace along with everything in it:

[source,bash]
----
oc delete namespace -n kiali-operator
----

== Additional Notes

=== Customize the Kiali UI web context root

By default, when installed on OpenShift, the Kiali UI is deployed to the root context path of "/" e.g. `https://kiali-istio-system.<your_cluster_domain_or_ip>/`. In some situations such as when you want to serve the Kiali UI along with other apps under the same host name, e.g., `example.com/kiali`, `example.com/app1`, you can edit the Kiali CR and provide a different value for `web_root`.  Note: the path must begin with a `/` and not end with a `/` (e.g. `/kiali` or `/mykiali`).

An example of custom web root:

[source,yaml]
----
server:
  web_root: /kiali
  ...
----

The above is actually the default when Kiali is installed on Kubernetes - so to access the Kiali UI on Kubernetes you access it at the root context path of "/kiali".

=== Login Options

Kiali supports three different login options.

*login*: This option allows a user to login into Kiali using a username and password. This is the default option if using Kubernetes.

*anonymous*: This option removes any login requirement. A user will not be presented the login page and will automatically have access to Kiali without having to present any credentials. 

*openshift*: If you have deployed Kiali on OpenShift you can use this option (this is the default option if using OpenShift). With this option users will log into Kiali using the OpenShift OAuth login. What users can access in Kiali will now be based on their user roles in OpenShift using the kubernetes RBAC.

icon:bullhorn[size=2x]{nbsp} Using the *anonymous* option will leave Kiali unsecured. Anyone who can access the console will have full access to Kiali. If you are using this option you will need to make sure that it is only available on a trusted network and that only trusted users can access it.

If `login` strategy is selected during the installation, a secret containing Kiali login credentials is required to be deployed along with Kiali. In this case, the install script will prompt you to enter a username and passphrase for the credentials that you want users to enter in order to log in successfully to Kiali. The install script will store those credentials in a secret that is deployed in the same namespace where Kiali is installed.

icon:bullhorn[size=1x]{nbsp} If you told the install script to not create a Kiali CR (and thus not have Kiali installed yet) via the OPERATOR_INSTALL_KIALI=false environment variable, you are responsible for creating this secret if you wish to install Kiali with the authentication strategy of "login". A secret is not required if your authentication strategy is not "login". The following command is a simple way to create a secret for Kiali whose username is "admin" and passphrase is "admin":
[source,bash]
----
oc create secret generic kiali -n istio-system --from-literal "username=admin" --from-literal "passphrase=admin"
----

For the `login` and `anonymous` login options, the content displayed in Kiali is based on the permissions of the Kiali service account. On Kubernetes, the Kiali service account has cluster wide access and will be able to display everything in the cluster. By default, in OpenShift the service account will also have access to everything in the cluster but this can be customized by following the link:#_reducing_permissions_in_openshift[instructions below].

For the `openshift` login option, the content displayed in Kiali is based on the permissions of the user who logged in via the OpenShift OAuth login page. This means that individual users will be shown different content based on their roles within OpenShift. See the link:#openshift_user_permissions[section] below for how to grant or remove a user's access to specific namespaces. 

The login option can be specified in the Kiali CR when installing Kiali. For instance, to use the `openshift` login option, the Kiali CR should contain the following in the `auth` section:

[source,yaml]
----
auth:
  strategy: openshift
----

[#openshift_user_permissions]
==== OpenShift User Permissions

If you are running with the `openshift` login option you will need to grant a user the 'kiali' role for them to be able to properly access a namespace in Kiali.

For instance, to grant the user 'developer' access to the 'myproject' namespace, you could run the following command:

[source,bash]
----
oc adm policy add-role-to-user kiali developer -n myproject
----

To remove the 'kiali' role from the user 'developer' in the 'myproject' namespace you can run the following command:

[source,bash]
----
oc adm policy remove-role-from-user kiali developer -n myproject
----

=== Reducing Permissions in OpenShift

By default, Kiali will run with its cluster role named `kiali`. It provides some read-write capabilities so Kiali can add, modify, or delete some service mesh resources to perform tasks such as adding and modifying Istio destination rules in any namespace.

If you prefer not to run Kiali with this read-write role across the cluster, it is possible to reduce these permissions to individual namespaces.

icon:lightbulb[size=1x]{nbsp} This only works for OpenShift since it can return a list of namespaces that a user has access to. Know how to make this work with Kubernetes? Awesome, please let us know in this https://issues.jboss.org/browse/KIALI-1675[issue].

The first thing you will need to do is to remove the cluster-wide permissions that are granted to Kiali by default:

[source,bash]
----
oc delete clusterrolebindings kiali
----

Then you will need to grant the `kiali` role in the namespace of your choosing:

[source,bash]
----
oc adm policy add-role-to-user kiali system:serviceaccount:istio-system:kiali-service-account -n ${NAMESPACE}
----

You can alternatively tell the Kiali Operator to install Kiali in "view only" mode (this does work for either OpenShift or Kubernetes). You do this by setting the `view_only_mode` to `true` in the Kiali CR:

[source,yaml]
----
deployment:
  view_only_mode: true
  ...
----

This allows Kiali to read service mesh resources found in the cluster, but it does not allow Kiali to add, modify, or delete them.

=== Cleaning Up If You Cannot Uninstall Kiali

In some unusual situations, you may notice you are unable to uninstall Kiali. For example, you may try to delete the istio-system namespace but the command to do so hangs. This may be because the Kiali Operator failed to successfully run its finalizer. When you get into a hung state, try this to see if it clears up the problem:

[source,bash]
----
oc patch kiali kiali -n kiali-operator -p '{"metadata":{"finalizers": []}}' --type=merge
----

If you happened to have installed the Kiali Operator (and more specifically the Kiali CR) in a different namespace, replace "kiali-operator" in the above command with the proper namespace where the Kiali CR is located.
